<package>
  <name>wifi_msgs</name>
  <description>wifi_msgs</description>
  <version>0.0.1</version>
  <maintainer email="austin@austin.austin">Austin Hendrix</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/wifi_msgs</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

</package>


