<?xml version="1.0"?>
<package>
  <name>wifi_vis</name>
  <version>0.0.0</version>
  <description>The wifi_vis package</description>
  <maintainer email="jbinney@todo.todo">jbinney</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rosbag</build_depend>
  <build_depend>ppas</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>rosbag</run_depend>
  <run_depend>ppas</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>

</package>
